# RK_Firmware_Studio

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GUIDE_ZH.md  README.md  RK_Firmware_Studio.desktop  run_rkstudio.sh
cpp/include/rkstudio/: backend.h  paths.h  qt_progress.h  qt_style.h  qt_window.h  specs.h  types.h  ui_server.h  utils.h
cpp/src/: backend.cpp  main.cpp  paths.cpp  qt_progress.cpp  qt_style.cpp  qt_window.cpp  specs.cpp  ui_server.cpp  utils.cpp
cpp/ui/: app.js  index.html  styles.css
